# iterate_pictures

./: .gitignore  CMakeLists.txt  library.cpp  library.h  readme.md
lib/utils/: LoadImageInfo.h  disk.cpp  disk.h
lib/utils/Image/: ImageFile.cpp  ImageFile.h
lib/utils/process/: process.cpp  process.h
lib/vars/: file_vars.h
